# pc-hardware-price-tracker

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260527_0001_initial_domain_tables.py
app/: database.py  main.py
app/models/: __init__.py  enums.py  price_snapshot.py  product.py  tracked_offer.py
docs/: PROJECT_PLAN.md
