[project]
name = "pc-hardware-price-tracker"
version = "0.1.0"
description = "Local, single-user, manually curated PC hardware price tracking journal."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy>=2",
    "alembic",
    "jinja2",
    "python-dotenv",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
